kubernetes/argocd/values/radarr/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: 7878
  selector:
    app: radarr
